# open-review

./: .dockerignore  .gitignore  Dockerfile  README.md  THIRD_PARTY_NOTICES.md  docref.toml  pyproject.toml
.github/workflows/: publish.yml  review.yml
.open-review/: codemap.md
docs/ci/: README.md  github-actions.yml  gitlab-ci.yml
docs/specs/: 01-open-review.md  02-open-review-v0.2.md
src/open_review/: ai.py  cascade.py  cli.py  codemap.py  config.py  diff.py  emitters.py  errors.py  findings.py  instructions.py  report.py  router.py  static.py  toolbox.py
src/open_review/rules/: python-eval.yml  python-exec.yml
tests/: conftest.py  test_ai.py  test_baseline.py  test_cascade.py  test_cli_config.py  test_cli_run.py  test_codemap.py  test_config.py  test_diff.py  test_emitters.py  test_findings.py  test_instructions.py  test_report.py  test_router.py  test_static.py  test_toolbox.py
